# exjobb

./: .gitignore  exempel.aux  exempel.bbl  exempel.blg  exempel.fdb_latexmk  exempel.fls  exempel.out  exempel.tex  exempel.toc  liumaiex-enkelfilig.tex  references.bib  test_lax.py  test_lax2.py
RapportMall/: exempel.tex  liulogo_sv.eps  liumaiex.cls  references.bib
avotpw/: peakons-orth-poly-arXiv-v2.aux  peakons-orth-poly-arXiv-v2.bbl  peakons-orth-poly-arXiv-v2.fdb_latexmk  peakons-orth-poly-arXiv-v2.fls  peakons-orth-poly-arXiv-v2.out  peakons-orth-poly-arXiv-v2.tex  peakons-orth-poly-arXiv-v2.toc  peakons-orth-poly-inputs-arXiv.inc  peakons-orth-poly-inputs-common.inc
peakon/: CMakeLists.txt  h.py  hf.py  hf4.py  hf5.py  hf6.py  jacobian copy.py  jacobian.py  lax_t.py  main copy.cpp  main.cpp  mainSparse.cpp  simplify.py  temp.txt  test.py  test_lax2.py  test_lax3.py  test_lax4.py  test_lax5.py  test_lax6.py  test_lax_kdv.py  test_lax_proper.py  test_n4.py  test_n5.py  test_n6.py
temp/: solve copy.py  solve.py  temp.txt
test/: Equation.nb  Jacobian.nb  Lax.nb  Lax2.nb  LaxCornerHFNovikov.nb  M41.nb  NovikovConstantTest.nb  Simulation.nb  Simulation2.nb  Simulation3.nb  Simulation3NoCollision.nb  SimulationCircle.nb  SimulationComplex.nb  SimulationComplexPeriodic.nb  SimulationPeriodic.nb  SimulationPeriodicCollision.nb  Untitled-1.nb  constantFinder.nb  constantfinder.nb  generalGConstant.nb  hamiltonian.nb  high-freq-Novikov.nb  high-freq-Novikov2.nb  meh.nb  neweset.nb  novikovNxNLaxFail.nb
thesis/: liumaiex.cls  references.bib  thesis.aux  thesis.bbl  (+6 more)
